--- a/index.html
+++ b/index.html
@@ -11,7 +11,13 @@
 <body>
     <div id="app">
         <div v-if="showBooks">
-            <p>{{ title }} - {{ author}} - {{ age }}</p>
+            <!-- <p>{{ title }} - {{ author}} - {{ age }}</p> -->
+            <ul>
+                <li v-for="book in books">
+                    <h3>{{ book.title }}</h3>
+                    <p>{{ book.author }}</p>
+                </li>
+            </ul>
         </div>
 
         <button v-on:click="age++">Increase age</button>
